# NineToFive

./: .env.example  .gitignore  FIREBASE_SETUP.md  Modelfile  Readme.md  SMART_RETRIEVAL.md  bns_ipc_mapping_full.csv  main.py  pyproject.toml  status.txt  uploads_db.json
.agent/workflows/: firebase-integration.md
backend/: .env.example  .gitignore  HOW_TO_USE.md  STRICT_GROUNDING_PROMPT.txt  app.py  app_flask_deprecated.py  batch_ingest.py  batch_orchestrator.py  cache_service.py  core.py  document_processor.py  enhance_stripper.py  firebase_config.py  fix_chromadb.py  ingest.py  kira_processor.py  llm_service.py  main.py  master_ingest.py  rag_service.py  requirements.txt  retrieval.py  smart_processor.py  smart_retrieval.py  test.py  test_rag.py  test_smart_retrieval.py  update_kira_strict.py  update_tts_smooth.py  uploads_db.json
backend/data/: translations.json
backend/retrieval_engine/: __init__.py  config.py
backend/scripts/: __init__.py  analyze_sections.py  check_section.py  debug_pdf.py  examine_bns_hindi.py  examine_mapping_pdf.py  export_chunks.py  ingest_case_law.py  ingest_data.py  ingest_mapping.py  inspect_chroma.py  inspect_db.py  test_bns_parser.py  test_bns_retrieval.py  test_hindi_parser.py  test_hindi_queries.py  test_mapping_parser.py  test_pdf_parser.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
scripts/: check_mapping.py  dump_mapping.py  examine_bns_pdf.py  examine_hindi_pdf.py  ingest_data.py  ingest_mapping.py  test_bns_hindi_ocr.py  test_pdfplumber.py
(+30 files in other folders)
