[project]
name = "ninetofive"
version = "0.1.0"
description = "AI-Powered Legal Helper - RAG framework for Indian legal queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Vector Store
    "chromadb>=0.4.22",
    # Embeddings
    "sentence-transformers>=2.2.2",
    # PDF Processing
    "pymupdf>=1.23.0",
    # Redis
    "redis>=5.0.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Language Detection
    "langdetect>=1.0.9",
    "pdfplumber>=0.11.9",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
